--- a/src/app/components/utils/frecuentes/frecuentes.component.html
+++ b/src/app/components/utils/frecuentes/frecuentes.component.html
@@ -10,7 +10,7 @@
             <li>Yape</li>
             <li>Plin</li>
           </ul>
-          <img src="assets/img/metodosdepago.png" alt="">
+          <img src="assets/img/metodosdepago.png" alt="Metodos de pago" loading="lazy" decoding="async">
         </div>
       </div>
     </details>
