--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="logo">
             <a routerLink="/home" fragment="home">
-                <img class="img-logo" src="assets/svg/footer.svg" alt="Teslanet" loading="lazy" decoding="async">
+                <img class="img-logo" src="assets/svg/footer.svg" alt="Teslanet logo" loading="lazy" decoding="async">
             </a>
         </div>
         <!-- Botón de menú (hamburger) -->
